feat: introduce world decorators to modularize tree and ore generation, adding coal and iron ores.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,6 +70,8 @@ add_executable(minceraft
     src/world/Chunk.cpp
     src/world/Player.cpp
     src/world/WorldGenerator.cpp
+    src/world/TreeDecorator.cpp
+    src/world/OreDecorator.cpp
     src/world/World.cpp
 )
 
