feat: Implement liquid block physics and rendering by adding block metadata and updating chunk meshing.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -101,7 +101,7 @@ add_executable(minceraft
     src/world/TreeDecorator.cpp
     src/world/OreDecorator.cpp
     src/world/World.cpp
-    src/world/World.cpp
+    src/world/blocks/LiquidBlock.cpp
     src/world/BlockRegistry.cpp
     src/ecs/Systems.cpp
     
