feat: Add core application entry point with game loop, rendering, world generation, and ECS, and rename `MINCERAFT_DEBUG` to `LITHOS_DEBUG`.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -125,7 +125,7 @@ FetchContent_MakeAvailable(spdlog)
 
 # Debug Macro
 if(CMAKE_BUILD_TYPE STREQUAL "Debug")
-    add_definitions(-DMINCERAFT_DEBUG)
+    add_definitions(-DLITHOS_DEBUG)
 endif()
 
 
