feat: Add multithreaded world generation, meshing, and block update systems, alongside new profiling tools and a menu state.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -161,6 +161,7 @@ add_executable(lithos
     src/debug/Profiler.cpp
     src/debug/CrashHandler.cpp
     src/debug/Logger.cpp
+    src/debug/Benchmark.cpp
     
     # ImGui
     ${imgui_SOURCE_DIR}/imgui.cpp
