feat: Implement MenuState with world generation configuration, 3D preview, and benchmarking, supported by multithreaded world processing and framebuffer rendering.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -155,6 +155,7 @@ add_executable(lithos
     src/render/Camera.cpp
     src/render/Texture.cpp
     src/render/TextureAtlas.cpp
+    src/render/Framebuffer.cpp
     src/render/ModelLoader.cpp
     src/world/Chunk.cpp
     src/world/WorldGenerator.cpp
