feat: add core application structure, resource manager, and initial game/menu states with 3D world preview

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -148,6 +148,7 @@ add_executable(lithos
     src/main.cpp 
     src/core/StateManager.cpp
     src/core/Application.cpp
+    src/core/ResourceManager.cpp
     src/states/LoadingState.cpp
     src/states/GameState.cpp
     src/states/MenuState.cpp
