feat: Implement a new world generation system with configurable parameters, various generation components, and a 3D preview in the menu state.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -167,6 +167,9 @@ add_executable(lithos
     src/world/World.cpp
     src/world/blocks/LiquidBlock.cpp
     src/world/BlockRegistry.cpp
+    src/world/gen/NoiseManager.cpp
+    src/world/gen/Landform.cpp
+    src/world/gen/RockStrata.cpp
     src/ecs/Systems.cpp
     src/debug/Profiler.cpp
     src/debug/CrashHandler.cpp
