feat: Introduce a configurable block layer generation system with JSON rules for surface and liquid blocks, integrated into a new WorldGenerator.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -171,6 +171,7 @@ add_executable(lithos
     src/world/gen/NoiseManager.cpp
     src/world/gen/Landform.cpp
     src/world/gen/RockStrata.cpp
+    src/world/gen/BlockLayerConfig.cpp
     src/ecs/Systems.cpp
     src/debug/Profiler.cpp
     src/debug/CrashHandler.cpp
